# cmake_templates

./: README.md
cmake_c/: CMakeLists.txt  README.md  config.doxy
cmake_c/src/: CMakeLists.txt  main.c
cmake_cpp/: CMakeLists.txt  README.md  config.doxy
cmake_cpp/src/: CMakeLists.txt  main.cpp
